# Aplicacion_Deporte

./: CMakeLists.txt  CMakeLists.txt.user.88fe322
src/: agregardialog.cpp  agregardialog.h  agregardialog.ui  deportista.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
